[tool.poetry]
name = "awscommunity-applicationautoscaling-scheduledaction"
version = "0.1.0"
description = ""
authors = ["John Preston <john@ews-network.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cloudformation-cli-python-lib = "^2.1.12"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyclean = "^2.2.0"
cloudformation-cli = "^0.2.25"
cloudformation-cli-python-plugin = "^2.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
