[tool.poetry]
name = "awscommunity-applicationautoscaling-scheduledaction"
version = "0.1.0"
description = "CFN Resource to CRUD AWS Application Autoscaling Scheduled Actions"
authors = ["John Preston <john@ews-network.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cloudformation-cli-python-lib = "^2.1"
python-dateutil = "^2.8"
boto3 = "^1.26"


[tool.poetry.group.dev.dependencies]
black = "^23.3"
pyclean = "^2.2.0"
cloudformation-cli = "^0.2"
cloudformation-cli-python-plugin = "^2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
